StyleSheets/style.css
/******************Body**********************/
body {
    background-color: #003738;
}

h1 {
  text-align: center;
  color: white;
}

p{
  color: white;
}

/****************Body end***********************/


/****************************Nav Bar**********************/
nav {
  background-color: #546C73;
  position: relative;
  z-index: 40;
}

ul{
    margin: 0;
    padding: 0;
    overflow: hidden;
    list-style-type: none;
    Border: 4px solid #546C73;
}

ul li {
  Border: 4px solid #546C73;
  float: right;
  background-color: #00A49C;
}

ul li a {
  color: black;
  Border: 4px solid #546C73;
  display: block;
  text-align: left;
  padding: 20px 20px;
  text-decoration: none;
}

ul li a:hover {
    background-color: #C1A09E;
}

ul li:hover {
    background-color: #C1A09E;
}

.LoreButton {
  display: block;
  text-align: left;
  padding: 20px 20px;
}

.Lore-content {
  display: none;
  position: absolute;
  background-color: #00A49C;
  min-width: 130px;
  left: 90%;
  right: 10%;
}

.LoreButton:hover .Lore-content {
  display: block;
}

.MapButton {
  display: block;
  text-align: right;
  padding: 20px 20px;
}

.Map-content {
  display: none;
  position: absolute;
  background-color: #00A49C;
  min-width: 130px;
}

.MapButton:hover .Map-content {
  display: block;
}

.CharecterButton {
  display: block;
  text-align: right;
  padding: 20px 20px;
}

.Charecter-content {
  display: none;
  position: absolute;
  background-color: #00A49C;
  min-width: 130px;
}

.CharecterButton:hover .Charecter-content {
  display: block;
}

/******************Nav Bar end*******************************/


/*****************************Main*******************************/
.container {
  display: grid;
  grid-template-columns: auto auto auto;
  grid-template-rows: auto auto auto auto auto;
  padding: 10px 10px;
}

.headder {
    border: 3px solid #546C73;
    grid-column-start: 1;
    grid-column-end: 4;
    padding: 10px 10px;
    margin: 20px;
}

.SmolMap {
    border: 3px solid #546C73;
    grid-column-start: 1;
    grid-column-end: 3;
    padding: 10px;
    margin: 20px;
}

.SmolMapInfo {
    border: 3px solid #546C73;
    grid-column-start: 3;
    grid-column-end: 4;
    padding: 10px;
    margin: 20px;
}

.BeeImage {
    border: 3px solid #546C73;
    grid-column-start: 1;
    grid-column-end: 2;
    padding: 10px;
    margin: 20px;
}

.VictorImage {
    border: 3px solid #546C73;
    grid-column-start: 2;
    grid-column-end: 3;
    padding: 10px;
    margin: 20px;
}

.WillImage {
    border: 3px solid #546C73;
    grid-column-start: 3;
    grid-column-end: 4;
    padding: 10px;
    margin: 20px;
}

.BeeInfo {
    border: 3px solid #546C73;
    grid-column-start: 1;
    grid-column-end: 2;
    padding: 10px;
    margin: 20px;
}

.VictorInfo {
    border: 3px solid #546C73;
    grid-column-start: 2;
    grid-column-end: 3;
    padding: 10px;
    margin: 20px;
}

.WillInfo {
    border: 3px solid #546C73;
    grid-column-start: 3;
    grid-column-end: 4;
    padding: 10px;
    margin: 20px;
}


/*****************************Main End*******************************/

/**************************Carosell*********************/
.carosell {
  border: 3px solid #546C73;
  grid-column-start: 1;
  grid-column-end: 4;
  padding: 10px;
  margin: 20px;
  position: relative;
}

.carosell .Inside {
  display: none; 
}

/* Next & previous buttons */
.prev, .next {
  position: absolute;
  cursor: pointer;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: #000000;
  background-color: #00A49C;
  font-weight: bold;
  font-size: 18px;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* next button */
.next {
  right: 10%;
  border-radius: 3px 0 0 3px;
}

/* prev button */
.prev {
  left: 10%;
  border-radius: 3px 0 0 3px;
}

.prev:hover, .next:hover {
  background-color: #C1A09E;
}

/* information on each slide */
.caption {
  color: #000000;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  left:20%;
}

/* idicators */
.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #00A49C;
  border-radius: 50%;
  display: inline-block;
}

.active, .dot:hover {
  background-color: #C1A09E;
}

/* Fading animation */
.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

/******Carosell end***********/

